Remove the original project proposal PDF and replace it with a new example PDF. Update the link in the index.html file accordingly.

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                     Supervised by Dr. Uthayasanker Thayasivam
                 </p>
             </div>
-            <a href="Final_Year_Project_Proposal.pdf" target="_blank" class="inline-block bg-white text-purple-600 px-8 py-3 rounded-lg font-semibold hover:bg-gray-100 transition-colors">
+            <a href="FYPExamplePDF.pdf" target="_blank" class="inline-block bg-white text-purple-600 px-8 py-3 rounded-lg font-semibold hover:bg-gray-100 transition-colors">
                 <i class="fas fa-file-pdf mr-2"></i>
                 See Project PDF
             </a>
