--- a/index.html
+++ b/index.html
@@ -90,10 +90,31 @@
                     Supervised by Dr. Uthayasanker Thayasivam
                 </p>
             </div>
-            <a href="FYPExamplePDF.pdf" target="_blank" class="inline-block bg-white text-purple-600 px-8 py-3 rounded-lg font-semibold hover:bg-gray-100 transition-colors">
+            <a href="FYPExample.pdf" target="_blank" class="inline-block bg-white text-purple-600 px-8 py-3 rounded-lg font-semibold hover:bg-gray-100 transition-colors">
                 <i class="fas fa-file-pdf mr-2"></i>
-                See Project PDF
+                See Project Proposal
             </a>
+        </div>
+    </section>
+
+    <!-- Survey Papers Section -->
+    <section id="survey-papers" class="py-16 bg-gray-50">
+        <div class="max-w-3xl mx-auto px-4 sm:px-6 lg:px-8">
+            <div class="text-center mb-10">
+                <h2 class="text-2xl md:text-3xl font-bold text-gray-900 mb-4">Survey Papers</h2>
+                <div class="w-16 h-1 bg-gradient-to-r from-purple-500 to-pink-500 mx-auto mb-4"></div>
+                <p class="text-gray-600">Key research papers related to English-to-Sinhala speech translation and TTS systems.</p>
+            </div>
+            <div class="grid md:grid-cols-2 gap-6">
+                <a href="Survey on Real_Time_English_to_Sinhala_Speech_Translation__A_System_Level_Review_of_Open__Source_Mod.pdf" target="_blank" class="flex items-center bg-white p-5 rounded-lg shadow-sm hover:shadow-md transition card-hover">
+                    <i class="fas fa-file-pdf text-3xl text-purple-600 mr-4"></i>
+                    <span class="font-semibold text-gray-800">Survey on Real-Time English to Sinhala Speech Translation</span>
+                </a>
+                <a href="Survey_of_Neural_TTS_Systems_for_Sinhala.pdf" target="_blank" class="flex items-center bg-white p-5 rounded-lg shadow-sm hover:shadow-md transition card-hover">
+                    <i class="fas fa-file-pdf text-3xl text-purple-600 mr-4"></i>
+                    <span class="font-semibold text-gray-800">Survey of Neural TTS Systems for Sinhala</span>
+                </a>
+            </div>
         </div>
     </section>
 
