--- a/index.html
+++ b/index.html
@@ -531,7 +531,7 @@
                     <div class="w-32 h-32 mx-auto mb-4 rounded-full bg-gradient-to-br from-purple-400 to-pink-400 flex items-center justify-center">
                         <i class="fas fa-user text-4xl text-white"></i>
                     </div>
-                    <h3 class="text-xl font-semibold text-gray-900 mb-2">Haritha</h3>
+                    <h3 class="text-xl font-semibold text-gray-900 mb-2">Haritha Mihimal</h3>
                     <p class="text-gray-600 text-sm">Team Member</p>
                     <div class="flex justify-center space-x-3 mt-4">
                         <a href="#" class="text-gray-400 hover:text-purple-600 transition-colors">
@@ -548,7 +548,7 @@
                     <div class="w-32 h-32 mx-auto mb-4 rounded-full bg-gradient-to-br from-blue-400 to-cyan-400 flex items-center justify-center">
                         <i class="fas fa-user text-4xl text-white"></i>
                     </div>
-                    <h3 class="text-xl font-semibold text-gray-900 mb-2">Visitha</h3>
+                    <h3 class="text-xl font-semibold text-gray-900 mb-2">Visitha Wikramasingha</h3>
                     <p class="text-gray-600 text-sm">Team Member</p>
                     <div class="flex justify-center space-x-3 mt-4">
                         <a href="#" class="text-gray-400 hover:text-purple-600 transition-colors">
@@ -565,7 +565,7 @@
                     <div class="w-32 h-32 mx-auto mb-4 rounded-full bg-gradient-to-br from-green-400 to-emerald-400 flex items-center justify-center">
                         <i class="fas fa-user text-4xl text-white"></i>
                     </div>
-                    <h3 class="text-xl font-semibold text-gray-900 mb-2">Oshadi</h3>
+                    <h3 class="text-xl font-semibold text-gray-900 mb-2">Osadi Kusalya</h3>
                     <p class="text-gray-600 text-sm">Team Member</p>
                     <div class="flex justify-center space-x-3 mt-4">
                         <a href="#" class="text-gray-400 hover:text-purple-600 transition-colors">
@@ -582,7 +582,7 @@
                     <div class="w-32 h-32 mx-auto mb-4 rounded-full bg-gradient-to-br from-yellow-400 to-orange-400 flex items-center justify-center">
                         <i class="fas fa-user text-4xl text-white"></i>
                     </div>
-                    <h3 class="text-xl font-semibold text-gray-900 mb-2">Hana</h3>
+                    <h3 class="text-xl font-semibold text-gray-900 mb-2">Fathima Hana</h3>
                     <p class="text-gray-600 text-sm">Team Member</p>
                     <div class="flex justify-center space-x-3 mt-4">
                         <a href="#" class="text-gray-400 hover:text-purple-600 transition-colors">
