Remove Phase 3 section from index.html as per user request. Update styling for AI/ML technologies section and correct team member name for accuracy.

--- a/index.html
+++ b/index.html
@@ -319,49 +319,7 @@
                 </div>
 
                 <!-- Phase 3 -->
-                <div class="timeline-item">
-                    <div class="grid md:grid-cols-2 gap-8 items-center">
-                        <div class="md:order-2">
-                            <div class="bg-gradient-to-br from-purple-50 to-pink-50 p-8 rounded-2xl">
-                                <div class="flex items-center mb-4">
-                                    <div class="bg-purple-500 text-white rounded-full w-8 h-8 flex items-center justify-center mr-3">
-                                        <i class="fas fa-brain text-sm"></i>
-                                    </div>
-                                    <h3 class="text-2xl font-bold text-gray-900">Phase 3 – Modularity & Extensibility</h3>
-                                </div>
-                                <ul class="space-y-3 text-gray-700">
-                                    <li class="flex items-center">
-                                        <i class="fas fa-puzzle-piece text-purple-600 mr-3"></i>
-                                        Component swapping and fine-tuning capabilities
-                                    </li>
-                                    <li class="flex items-center">
-                                        <i class="fas fa-server text-purple-600 mr-3"></i>
-                                        Microservices and streaming agents deployment
-                                    </li>
-                                    <li class="flex items-center">
-                                        <i class="fas fa-plug text-purple-600 mr-3"></i>
-                                        Integration with browser extensions and video players
-                                    </li>
-                                    <li class="flex items-center">
-                                        <i class="fas fa-expand-arrows-alt text-purple-600 mr-3"></i>
-                                        Scalable architecture for other language pairs
-                                    </li>
-                                    <li class="flex items-center">
-                                        <i class="fas fa-gpu text-purple-600 mr-3"></i>
-                                        GPU optimization (NVIDIA T4) with quantized models
-                                    </li>
-                                </ul>
-                            </div>
-                        </div>
-                        <div class="md:order-1">
-                            <div class="text-center">
-                                <i class="fas fa-robot text-6xl text-purple-600 mb-4"></i>
-                                <h4 class="text-xl font-semibold text-gray-900 mb-2">Future-Ready</h4>
-                                <p class="text-gray-600">Extensible system for research and commercial applications</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+                <!-- Removed as per user request -->
             </div>
         </div>
     </section>
@@ -376,27 +334,27 @@
             
             <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-8">
                 <!-- AI/ML Technologies -->
-                <div class="bg-white p-6 rounded-xl shadow-sm">
-                    <h3 class="text-xl font-semibold text-gray-900 mb-4 flex items-center">
+                <div class="bg-white p-6 rounded-2xl shadow-lg">
+                    <h3 class="text-xl font-bold text-gray-900 mb-6 flex items-center">
                         <i class="fas fa-brain text-purple-600 mr-2"></i>
                         AI & Machine Learning
                     </h3>
-                    <div class="space-y-3">
-                        <div class="flex items-center justify-between p-3 bg-purple-50 rounded-lg">
-                            <span class="font-medium">ASR</span>
-                            <span class="text-purple-600 font-semibold">FastWhisper + Silero VAD</span>
+                    <div class="space-y-4">
+                        <div class="flex flex-col sm:flex-row sm:items-center justify-between p-4 bg-purple-50 rounded-lg">
+                            <span class="font-semibold text-black w-32">ASR</span>
+                            <span class="text-purple-600 font-semibold text-right">FastWhisper + Silero VAD</span>
                         </div>
-                        <div class="flex items-center justify-between p-3 bg-purple-50 rounded-lg">
-                            <span class="font-medium">MT</span>
-                            <span class="text-purple-600 font-semibold">Meta NLLB-200 (1.3B) + CTranslate2</span>
+                        <div class="flex flex-col sm:flex-row sm:items-center justify-between p-4 bg-purple-50 rounded-lg">
+                            <span class="font-semibold text-black w-32">MT</span>
+                            <span class="text-purple-600 font-semibold text-right">Meta NLLB-200 (1.3B) + CTranslate2</span>
                         </div>
-                        <div class="flex items-center justify-between p-3 bg-purple-50 rounded-lg">
-                            <span class="font-medium">TTS</span>
-                            <span class="text-purple-600 font-semibold">XTTS_v2 / GPT-4o-mini-TTS + Seed-VC</span>
+                        <div class="flex flex-col sm:flex-row sm:items-center justify-between p-4 bg-purple-100 rounded-lg">
+                            <span class="font-semibold text-black w-32">TTS</span>
+                            <span class="text-purple-600 font-semibold text-right">XTTS_v2 / GPT-4o-mini-TTS + Seed-VC</span>
                         </div>
-                        <div class="flex items-center justify-between p-3 bg-purple-50 rounded-lg">
-                            <span class="font-medium">Voice Cloning</span>
-                            <span class="text-purple-600 font-semibold">Seed-VC for speaker preservation</span>
+                        <div class="flex flex-col sm:flex-row sm:items-center justify-between p-4 bg-purple-100 rounded-lg">
+                            <span class="font-semibold text-black w-32">Voice Cloning</span>
+                            <span class="text-purple-600 font-semibold text-right">Seed-VC for speaker preservation</span>
                         </div>
                     </div>
                 </div>
@@ -548,7 +506,7 @@
                     <div class="w-32 h-32 mx-auto mb-4 rounded-full bg-gradient-to-br from-blue-400 to-cyan-400 flex items-center justify-center">
                         <i class="fas fa-user text-4xl text-white"></i>
                     </div>
-                    <h3 class="text-xl font-semibold text-gray-900 mb-2">Visitha Wikramasingha</h3>
+                    <h3 class="text-xl font-semibold text-gray-900 mb-2">Visitha Wickramasinghe</h3>
                     <p class="text-gray-600 text-sm">Team Member</p>
                     <div class="flex justify-center space-x-3 mt-4">
                         <a href="#" class="text-gray-400 hover:text-purple-600 transition-colors">
