--- a/index.html
+++ b/index.html
@@ -105,14 +105,18 @@
                 <div class="w-16 h-1 bg-gradient-to-r from-purple-500 to-pink-500 mx-auto mb-4"></div>
                 <p class="text-gray-600">Key research papers related to English-to-Sinhala speech translation and TTS systems.</p>
             </div>
-            <div class="grid md:grid-cols-2 gap-6">
-                <a href="Survey on Real_Time_English_to_Sinhala_Speech_Translation__A_System_Level_Review_of_Open__Source_Mod.pdf" target="_blank" class="flex items-center bg-white p-5 rounded-lg shadow-sm hover:shadow-md transition card-hover">
+            <div class="flex flex-col md:flex-row md:gap-x-10 gap-y-6 justify-center items-stretch">
+                <a href="Survey on Real_Time_English_to_Sinhala_Speech_Translation__A_System_Level_Review_of_Open__Source_Mod.pdf" target="_blank" class="flex items-center bg-white p-5 rounded-lg shadow-sm hover:shadow-md transition card-hover min-w-[250px]">
                     <i class="fas fa-file-pdf text-3xl text-purple-600 mr-4"></i>
-                    <span class="font-semibold text-gray-800">Survey on Real-Time English to Sinhala Speech Translation</span>
+                    <span class="font-semibold text-gray-800">Real-Time Speech Translation</span>
                 </a>
-                <a href="Survey_of_Neural_TTS_Systems_for_Sinhala.pdf" target="_blank" class="flex items-center bg-white p-5 rounded-lg shadow-sm hover:shadow-md transition card-hover">
+                <a href="Survey_of_Neural_TTS_Systems_for_Sinhala.pdf" target="_blank" class="flex items-center bg-white p-5 rounded-lg shadow-sm hover:shadow-md transition card-hover min-w-[250px]">
                     <i class="fas fa-file-pdf text-3xl text-purple-600 mr-4"></i>
-                    <span class="font-semibold text-gray-800">Survey of Neural TTS Systems for Sinhala</span>
+                    <span class="font-semibold text-gray-800">Neural TTS Systems</span>
+                </a>
+                <a href="First_Conference_Paper-1.pdf" target="_blank" class="flex items-center bg-white p-5 rounded-lg shadow-sm hover:shadow-md transition card-hover min-w-[250px]">
+                    <i class="fas fa-file-pdf text-3xl text-purple-600 mr-4"></i>
+                    <span class="font-semibold text-gray-800">Conference Paper</span>
                 </a>
             </div>
         </div>
