--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                 <p class="text-gray-600">Key research papers related to English-to-Sinhala speech translation and TTS systems.</p>
             </div>
             <div class="flex flex-col md:flex-row md:gap-x-10 gap-y-6 justify-center items-stretch">
-                <a href="Survey on Real_Time_English_to_Sinhala_Speech_Translation__A_System_Level_Review_of_Open__Source_Mod.pdf" target="_blank" class="flex items-center bg-white p-5 rounded-lg shadow-sm hover:shadow-md transition card-hover min-w-[250px]">
+                <a href="Real_Time_English_to_Sinhala_Speech_Translation__A_System_Level_Review_of_Open__Source_Models_and_Pipeli.pdf" target="_blank" class="flex items-center bg-white p-5 rounded-lg shadow-sm hover:shadow-md transition card-hover min-w-[250px]">
                     <i class="fas fa-file-pdf text-3xl text-purple-600 mr-4"></i>
                     <span class="font-semibold text-gray-800">Real-Time Speech Translation</span>
                 </a>
